added h2 and p elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1> 
+    <h1>hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, reiciendis necessitatibus. Dolorem nisi eius corporis veritatis. Hic expedita aperiam nemo odio est vero sunt doloribus!</p>
+    <h2>hello people</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore reprehenderit eos illo dolorem minus quia recusandae magni delectus. Soluta quidem ea natus error. Explicabo, sint!</p>
 </body>
 </html>
