updated techdoc folder

--- a/tech_doc/techDoc.html
+++ b/tech_doc/techDoc.html
@@ -10,20 +10,23 @@
   <body>
     <nav id="navbar">
       <header>
-        <p id="navbar-p">Topic of My Technical Document</p>
+        <h1>My Technical Document</h1>
+        <p id="navbar_p">Some Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, ullam! Topic of My Technical Document</p>
       </header>
-      <a class="nav-link" href="#section_one">Section One</a>
-      <a class="nav-link" href="#section_two">Section Two</a>
-      <a class="nav-link" href="#section_three">Section Three</a>
-      <a class="nav-link" href="#section_four">Section Four</a>
-      <a class="nav-link" href="#section_five">Section Five</a>
-      <a class="nav-link" href="#section_six">Section Six</a>
-      <a class="nav-link" href="#section_seven">Section Seven</a>
-      <a class="nav-link" href="#section_eight">Section Eight</a>
-      <a class="nav-link" href="#section_nine">Section Nine</a>
-      <a class="nav-link" href="#section_ten">Section Ten</a>
-      <a class="nav-link" href="#section_eleven">Section Eleven</a>
-      <a class="nav-link" href="#section_twelve">Section Twelve</a>
+      <div id="navbar_div">
+        <a class="nav-link" href="#section_one">Section One</a>
+        <a class="nav-link" href="#section_two">Section Two</a>
+        <a class="nav-link" href="#section_three">Section Three</a>
+        <a class="nav-link" href="#section_four">Section Four</a>
+        <a class="nav-link" href="#section_five">Section Five</a>
+        <a class="nav-link" href="#section_six">Section Six</a>
+        <a class="nav-link" href="#section_seven">Section Seven</a>
+        <a class="nav-link" href="#section_eight">Section Eight</a>
+        <a class="nav-link" href="#section_nine">Section Nine</a>
+        <a class="nav-link" href="#section_ten">Section Ten</a>
+        <a class="nav-link" href="#section_eleven">Section Eleven</a>
+        <a class="nav-link" href="#section_twelve">Section Twelve</a>
+      </div>
     </nav>
 
     <main id="main-doc">
@@ -272,6 +275,9 @@
           >
         </header>
       </section>
+      <div id="foot_div">
+
+      </div>
     </main>
   </body>
 </html>
