--- a/tech_doc/techDoc.html
+++ b/tech_doc/techDoc.html
@@ -11,7 +11,10 @@
     <nav id="navbar">
       <header>
         <h1>My Technical Document</h1>
-        <p id="navbar_p">Some Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, ullam! Topic of My Technical Document</p>
+        <p id="navbar_p">
+          Some Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio,
+          ullam! Topic of My Technical Document
+        </p>
       </header>
       <div id="navbar_div">
         <a class="nav-link" href="#section_one">Section One</a>
@@ -275,9 +278,7 @@
           >
         </header>
       </section>
-      <div id="foot_div">
-
-      </div>
+      <div id="foot_div"></div>
     </main>
   </body>
 </html>
