updated techDoc.html and styles

--- a/tech_doc/techDoc.html
+++ b/tech_doc/techDoc.html
@@ -22,6 +22,10 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Technical Document</title>
   </head>
@@ -33,25 +37,31 @@
           Some Lorem ipsum sit, ullam! Topic of My Technical Document
         </p>
       </header>
-      <div id="navbar_div">
-        <a class="nav-link" href="#section_one">Section One</a>
-        <a class="nav-link" href="#section_two">Section Two</a>
-        <a class="nav-link" href="#section_three">Section Three</a>
-        <a class="nav-link" href="#section_four">Section Four</a>
-        <a class="nav-link" href="#section_five">Section Five</a>
-        <a class="nav-link" href="#section_six">Section Six</a>
-        <a class="nav-link" href="#section_seven">Section Seven</a>
-        <a class="nav-link" href="#section_eight">Section Eight</a>
-        <a class="nav-link" href="#section_nine">Section Nine</a>
-        <a class="nav-link" href="#section_ten">Section Ten</a>
-        <a class="nav-link" href="#section_eleven">Section Eleven</a>
-        <a class="nav-link" href="#section_twelve">Section Twelve</a>
-      </div>
+      <ul id="navbar_ul">
+        <li><a class="nav-link" href="#section_one">Section One</a></li>
+        <li><a class="nav-link" href="#section_two">Section Two</a></li>
+        <li><a class="nav-link" href="#section_three">Section Three</a></li>
+        <li><a class="nav-link" href="#section_four">Section Four</a></li>
+        <li><a class="nav-link" href="#section_five">Section Five</a></li>
+        <li><a class="nav-link" href="#section_six">Section Six</a></li>
+        <li><a class="nav-link" href="#section_seven">Section Seven</a></li>
+        <li><a class="nav-link" href="#section_eight">Section Eight</a></li>
+        <li><a class="nav-link" href="#section_nine">Section Nine</a></li>
+        <li><a class="nav-link" href="#section_ten">Section Ten</a></li>
+        <li><a class="nav-link" href="#section_eleven">Section Eleven</a></li>
+        <li><a class="nav-link" href="#section_twelve">Section Twelve</a></li>
+        <li>
+          <a href="#section_two" class="hamburger"
+            ><i class="fa fa-bars"></i
+          ></a>
+        </li>
+      </ul>
     </nav>
 
     <main id="main-doc">
       <section class="main-section" id="section_one">
         <header>
+          Section One
           <h2>Section One</h2>
           <p>
             <span class="parag_header">Paragraph here 1</span> Lorem ipsum dolor
@@ -84,6 +94,7 @@
 
       <section class="main-section" id="section_two">
         <header>
+          Section Two
           <h2>Section Two</h2>
           <p>
             <span class="parag_header">Paragraphs here 2</span> Lorem ipsum
@@ -119,6 +130,7 @@
 
       <section class="main-section" id="section_three">
         <header>
+          Section Three
           <h2>Section Three</h2>
           <p>
             <span class="parag_header">Paragraphs here 3</span> Lorem ipsum
@@ -157,6 +169,7 @@
 
       <section class="main-section" id="section_four">
         <header>
+          Section Four
           <h2>Section Four</h2>
           <p>
             <span class="parag_header">Paragraphs here 4</span> Lorem ipsum
@@ -185,6 +198,7 @@
 
       <section class="main-section" id="section_five">
         <header>
+          Section Five
           <h2>Section Five</h2>
           <p>
             <span class="parag_header">Paragraphs here 5</span> Lorem ipsum
@@ -217,6 +231,7 @@
 
       <section class="main-section" id="section_six">
         <header>
+          Section Six
           <h2>Section Six</h2>
           <p>
             <span class="parag_header">Paragraphs here 6</span> Lorem ipsum
@@ -239,6 +254,7 @@
 
       <section class="main-section" id="section_seven">
         <header>
+          Section Seven
           <h2>Section Seven</h2>
           <p>
             <span class="parag_header">Paragraphs here 7</span> Lorem ipsum
@@ -276,6 +292,7 @@
 
       <section class="main-section" id="section_eight">
         <header>
+          Section Eight
           <h2>Section Eight</h2>
           <p>
             <span class="parag_header">Paragraphs here 8</span> Lorem ipsum
@@ -318,6 +335,7 @@
 
       <section class="main-section" id="section_nine">
         <header>
+          Section Nine
           <h2>Section Nine</h2>
           <p>
             <span class="parag_header">Paragraphs here 9</span> Lorem ipsum
@@ -357,6 +375,7 @@
 
       <section class="main-section" id="section_ten">
         <header>
+          Section Ten
           <h2>Section Ten</h2>
           <p>
             <span class="parag_header">Paragraphs here 10</span> Lorem ipsum
@@ -399,6 +418,7 @@
 
       <section class="main-section" id="section_eleven">
         <header>
+          Section Eleven
           <h2>Section Eleven</h2>
           <code
             >Codes here 6: Lorem ipsum dolor sit amet consectetur adipisicing
@@ -418,6 +438,7 @@
 
       <section class="main-section" id="section_twelve">
         <header>
+          Section Twelve
           <h2>Section Twelve</h2>
           <code
             >Codes here 7: Lorem, ipsum dolor sit amet consectetur adipisicing
@@ -446,11 +467,12 @@
             magnam!
           </p>
           <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-          autem tempora rem enim praesentium obcaecati suscipit minima possimus
-          molestiae expedita laudantium ab nobis, nemo quia error in eaque dolor
-          earum beatae, impedit illum quod officiis. Fuga numquam quibusdam id
-          sit.</p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            autem tempora rem enim praesentium obcaecati suscipit minima
+            possimus molestiae expedita laudantium ab nobis, nemo quia error in
+            eaque dolor earum beatae, impedit illum quod officiis. Fuga numquam
+            quibusdam id sit.
+          </p>
         </header>
       </section>
       <div id="foot_div">
