--- a/web_app/index.html
+++ b/web_app/index.html
@@ -3,41 +3,226 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
+    <title>Early-Man Camping</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <header id="header">
-      <img src="" alt="" id="header-img">
+      <img
+        src="./img/earlyManCampingLogo.png"
+        alt="Early-Man Camping Logo"
+        id="header-img"
+      />
+      <h1>Early-Man Camping</h1>
+      <p>Camping In The Wild like the Early-Man lived!</p>
+
       <nav id="nav-bar">
-        <ul>
-        <li><a class="nav-link" href="#corresponding section 1">section 1</a></li>
-        <li><a class="nav-link" href="#corresponding section 2">section 2</a></li>
-        <li><a class="nav-link" href="#corresponding section 3">section 3</a></li>
+        <ul id="navbar-ul">
+          <li>
+            <a class="nav-link" href="#header-img">logo</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#some-info">some info</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#video">video</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#skills">skills</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#form">form</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#booking">booking</a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
-    <section>
-    <video id="video"></video>
-    </section>
-    <section>
-    <form action="https://www.freecodecamp.com/email-submit">
-      <input type="email" id="email" placeholder="enter email" required>
-      <input type="submit" id="submit" value="Submit" >
-    </form>
-    </section>
+      <section id="some-info">
+        <h2 class="sub-heading">Lorem ipsum dolor sit amet consectetur.</h2>
+        <p class="paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+          quisquam mollitia, perferendis non optio explicabo delectus accusamus,
+          sapiente cumque maxime consectetur at nisi voluptatum architecto alias
+          libero, iusto quaerat ipsum.
+        </p>
+        <figure>
+          <!-- <iframe width="1024" height="576" src="https://www.youtube.com/embed/pEcbKj-uEF4" title="Western Mourne Mountains - Winter Wild Camping - Scarp 1 Tarptent" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          <video id="video" width="75%" height="auto" controls>
+            <source
+              src="https://www.youtube.com/embed/pEcbKj-uEF4"
+              type="video/mp4"
+            />
+          </video>
+          <figcaption>What to expect is wild camping in nature</figcaption>
+        </figure>
+      </section>
+      <section id="skills">
+        <h2 class="sub-heading">you will learn survival skills</h2>
+        <p class="paragraph">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
+          voluptates aut animi dolorem voluptas perferendis quia? Quam nihil cum
+          inventore voluptas nobis quos ullam amet. Repellat illo explicabo
+          ratione ab.
+        </p>
+        <ul id="skills-ul">
+          <li>
+            hunting and gathering
+            <span
+              >you will learn how to hunt for survival and learn how to and what
+              to gather for food. you will also learn how to preserve what you
+              have to last longer</span
+            >
+          </li>
+          <li>
+            self-built tents
+            <span
+              >using locally available materials, you will build youself an
+              habitable shelter to withstand the elements, keeping you also safe
+              and protected from wild animals</span
+            >
+          </li>
+          <li>
+            making fire
+            <span
+              >fire is essential for your cooking and keeping warm. you will
+              learn how to make fire just like the early-man did using flint
+              stones and other locally available flamable materials like staw
+              and wood</span
+            >
+          </li>
+          <li>
+            finding water
+            <span
+              >without water, you will not survive for long. you will learn how
+              to find water, purify it and make it safe to drink</span
+            >
+          </li>
+          <li>
+            know your knots
+            <span
+              >knowing how to make ropes and knot them around branches and the
+              likes will help you construct stuff that will make your wild
+              camping successful</span
+            >
+          </li>
+          <li>
+            and more as required by situation occuring!
+            <span
+              >you will be supervised by experienced trainers who while teaching
+              you the necessary can assertain what other essential skills you
+              may require depending on the environment you are camping in</span
+            >
+          </li>
+        </ul>
+        <p class="paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+          dicta facilis esse sed, totam tempora blanditiis error ducimus?
+          Suscipit, possimus. Quidem voluptas quia eveniet dicta quisquam ipsum
+          illo sit debitis!
+        </p>
+      </section>
+      <section id="form">
+        <h2 class="sub-heading">Registration</h2>
+        <p>
+          Register your interest by filling the form and we will contact you
+          with more information
+        </p>
+        <form action="https://www.freecodecamp.com/email-submit">
+          <h2 class="sub-heading">Registration Form</h2>
+          <label for="forename"> Forename:</label>
+
+          <input type="text" id="forename" required />
+
+          <label for="surname"> Surname:</label>
+
+          <input type="text" id="surname" required />
+
+          <label for="email"> Email:</label>
+
+          <input type="email" id="email" placeholder="enter email" required />
+
+          <label for="textarea"> Enter any special request here:</label>
+
+          <textarea
+            name="textarea"
+            id="textarea"
+            cols="30"
+            rows="10"
+            placeholder="Enter any special request here"
+          ></textarea>
+
+          <input type="submit" id="submit" value="Submit" />
+        </form>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum,
+          delectus?
+        </p>
+      </section>
+
+      <section id="booking">
+        <h2 class="sub-heading booking">Booking</h2>
+        <p class="paragraph">
+          Book NOW for an unforgettable experience. Choose from:
+        </p>
+        <article>
+          <h3><a href="#">Greenhorn Experience</a></h3>
+          <p class="paragraph">
+            <em class="em">"Total Rookie"</em> No previous experience
+          </p>
+          <p class="article-p">£500</p>
+        </article>
+        <article>
+          <h3><a href="#">Brownhorn Experience</a></h3>
+          <p class="paragraph">
+            <em class="em">"I've Done It Before"</em> Some experience
+          </p>
+          <p class="article-p">£750</p>
+        </article>
+        <article>
+          <h3><a href="#">Brokenhorn Experience</a></h3>
+          <p class="paragraph">
+            <em class="em">"Die-Hard"</em> Can't-get-enough of the experience
+          </p>
+          <p class="article-p">£1000</p>
+        </article>
+      </section>
     </main>
     <footer>
-      <address></address>
-      <p></p>
-      <ul>
-        <li><a class="nav-link" href="#corresponding section 1">section 1</a></li>
-        <li><a class="nav-link" href="#corresponding section 2">section 2</a></li>
-        <li><a class="nav-link" href="#corresponding section 3">section 3</a></li>
+      <address>EarlyMan Camping</address>
+      <p>Location: In the wild, anywhere!</p>
+      <p>Copyright&copy (Dec. 2022)</p>
+
+      <ul id="footer-ul">
+        <li>
+          <a class="nav-link" href="#header-img">logo</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#some-info">some info</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#video">video</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#skills">skills</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#form">form</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#booking">booking</a>
+        </li>
       </ul>
+      <a
+        href="https://www.flaticon.com/free-icons/caveman"
+        title="caveman icons"
+        >Caveman icons created by Flat Icons - Flaticon</a
+      >
     </footer>
   </body>
 </html>
