web_app folder updated

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -52,14 +52,19 @@
           libero, iusto quaerat ipsum.
         </p>
         <figure>
-          <!-- <iframe width="1024" height="576" src="https://www.youtube.com/embed/pEcbKj-uEF4" title="Western Mourne Mountains - Winter Wild Camping - Scarp 1 Tarptent" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-          <video id="video" width="75%" height="auto" controls>
-            <source
-              src="https://www.youtube.com/embed/pEcbKj-uEF4"
-              type="video/mp4"
-            />
-          </video>
-          <figcaption>What to expect is wild camping in nature</figcaption>
+          <iframe
+            id="video"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/pEcbKj-uEF4"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <figcaption>
+            What to expect is wild camping in nature, watch this video.
+          </figcaption>
         </figure>
       </section>
       <section id="skills">
