--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/a6cf558f83.js" crossorigin="anonymous"></script>
   </head>
   <body>
     HEAD
@@ -14,6 +15,13 @@
       mollitia possimus harum laborum corporis reiciendis excepturi hic
       necessitatibus eaque.
     </p>
+      <ul class="fa-ul">
+    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>List icons can</li>
+    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>be used to</li>
+    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>replace bullets</li>
+    <li><span class="fa-li"><i class="fa-regular fa-square"></i></span>in lists</li>
+  </ul>
+
     <h2>heading2</h2>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa,
