--- a/web_app/index.html
+++ b/web_app/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Early-Man Camping</title>
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/a6cf558f83.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -78,7 +82,7 @@
         <ul id="skills-ul">
           <li>
             hunting and gathering
-            <span
+            <span class="fa-solid fa-campfire"
               >you will learn how to hunt for survival and learn how to and what
               to gather for food. you will also learn how to preserve what you
               have to last longer</span
@@ -86,15 +90,16 @@
           </li>
           <li>
             self-built tents
-            <span
+            <span class="fa-solid fa-campfire"
               >using locally available materials, you will build youself an
               habitable shelter to withstand the elements, keeping you also safe
               and protected from wild animals</span
             >
           </li>
+
           <li>
             making fire
-            <span
+            <span class="fa-solid"
               >fire is essential for your cooking and keeping warm. you will
               learn how to make fire just like the early-man did using flint
               stones and other locally available flamable materials like staw
@@ -103,14 +108,14 @@
           </li>
           <li>
             finding water
-            <span
+            <span class="fa-solid"
               >without water, you will not survive for long. you will learn how
               to find water, purify it and make it safe to drink</span
             >
           </li>
           <li>
             know your knots
-            <span
+            <span class="fa-solid"
               >knowing how to make ropes and knot them around branches and the
               likes will help you construct stuff that will make your wild
               camping successful</span
@@ -118,7 +123,7 @@
           </li>
           <li>
             and more as required by situation occuring!
-            <span
+            <span class="fa-solid"
               >you will be supervised by experienced trainers who while teaching
               you the necessary can assertain what other essential skills you
               may require depending on the environment you are camping in</span
