web_app folder updated

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -72,7 +72,7 @@
         </figure>
       </section>
       <section id="skills">
-        <h2 class="sub-heading">you will learn survival skills</h2>
+        <h2 class="sub-heading">You Will Learn Survival Skills</h2>
         <p class="paragraph">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
           voluptates aut animi dolorem voluptas perferendis quia? Quam nihil cum
@@ -81,50 +81,56 @@
         </p>
         <ul id="skills-ul">
           <li>
-            hunting and gathering
-            <span class="fa-solid fa-campfire"
-              >you will learn how to hunt for survival and learn how to and what
+            <i class="fas">&#xf700;</i>
+            Hunting and Gathering
+            <span class="fa-solid"
+              >You will learn how to hunt for survival and learn how to and what
               to gather for food. you will also learn how to preserve what you
               have to last longer</span
             >
           </li>
           <li>
-            self-built tents
-            <span class="fa-solid fa-campfire"
-              >using locally available materials, you will build youself an
+            <i class="fas">&#xf6bb;</i>
+            Self-Built Tents
+            <span class="fa-solid"
+              >Using locally available materials, you will build youself an
               habitable shelter to withstand the elements, keeping you also safe
               and protected from wild animals</span
             >
           </li>
 
           <li>
-            making fire
+            <i class="fas">&#xf06d;</i>
+            Making Fire
             <span class="fa-solid"
-              >fire is essential for your cooking and keeping warm. you will
+              >Fire is essential for your cooking and keeping warm. you will
               learn how to make fire just like the early-man did using flint
               stones and other locally available flamable materials like staw
               and wood</span
             >
           </li>
           <li>
-            finding water
+            <i class="fas">&#xf773;</i>
+            Finding Water
             <span class="fa-solid"
-              >without water, you will not survive for long. you will learn how
+              >Without water, you will not survive for long. you will learn how
               to find water, purify it and make it safe to drink</span
             >
           </li>
           <li>
-            know your knots
+            <i class="fas">&#xf0c1;</i>
+            Know your Knots
             <span class="fa-solid"
-              >knowing how to make ropes and knot them around branches and the
+              >Knowing how to make ropes and knot them around branches and the
               likes will help you construct stuff that will make your wild
               camping successful</span
             >
           </li>
           <li>
-            and more as required by situation occuring!
+            <i class="fas">&#xf6ec;</i>
+            ...and more as required by situation occuring!
             <span class="fa-solid"
-              >you will be supervised by experienced trainers who while teaching
+              >You will be supervised by experienced trainers who while teaching
               you the necessary can assertain what other essential skills you
               may require depending on the environment you are camping in</span
             >
@@ -186,6 +192,7 @@
             <em class="em">"Total Rookie"</em> No previous experience
           </p>
           <p class="article-p">£500</p>
+          <button class="select">Select</button>
         </article>
         <article>
           <h3><a href="#">Brownhorn Experience</a></h3>
@@ -193,6 +200,7 @@
             <em class="em">"I've Done It Before"</em> Some experience
           </p>
           <p class="article-p">£750</p>
+          <button class="select">Select</button>
         </article>
         <article>
           <h3><a href="#">Brokenhorn Experience</a></h3>
@@ -200,6 +208,7 @@
             <em class="em">"Die-Hard"</em> Can't-get-enough of the experience
           </p>
           <p class="article-p">£1000</p>
+          <button class="select">Select</button>
         </article>
       </section>
     </main>
