web_app folder updated

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -192,7 +192,7 @@
             <em class="em">"Total Rookie"</em> No previous experience
           </p>
           <p class="article-p">£500</p>
-          <button class="select">Select</button>
+          <button class="select" type="button" value="£500" onclick="alert('£500 Selected')">Select</button>
         </article>
         <article>
           <h3><a href="#">Brownhorn Experience</a></h3>
@@ -200,7 +200,7 @@
             <em class="em">"I've Done It Before"</em> Some experience
           </p>
           <p class="article-p">£750</p>
-          <button class="select">Select</button>
+          <button class="select" type="button" value="£750" onclick="alert('£750 Selected')">Select</button>
         </article>
         <article>
           <h3><a href="#">Brokenhorn Experience</a></h3>
@@ -208,7 +208,7 @@
             <em class="em">"Die-Hard"</em> Can't-get-enough of the experience
           </p>
           <p class="article-p">£1000</p>
-          <button class="select">Select</button>
+          <button class="select" type="button" value="£1000" onclick="alert('£1000 Selected')">Select</button>
         </article>
       </section>
     </main>
