--- a/web_app/index.html
+++ b/web_app/index.html
@@ -15,6 +15,28 @@
 
   <body>
     <header id="header">
+      <nav id="nav-bar">
+        <ul id="navbar-ul">
+          <li>
+            <a class="nav-link" href="#header-img">Logo</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#info">Info</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#video">Video</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#form">Form</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#booking">Booking</a>
+          </li>
+        </ul>
+      </nav>
       <img
         src="./img/earlyManCampingLogo.png"
         alt="Early-Man Camping Logo"
@@ -22,32 +44,9 @@
       />
       <h1>Early-Man Camping</h1>
       <p>Camping In The Wild like the Early-Man lived!</p>
-
-      <nav id="nav-bar">
-        <ul id="navbar-ul">
-          <li>
-            <a class="nav-link" href="#header-img">logo</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#some-info">some info</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#video">video</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#skills">skills</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#form">form</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#booking">booking</a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <main>
-      <section id="some-info">
+      <section id="info">
         <h2 class="sub-heading">Lorem ipsum dolor sit amet consectetur.</h2>
         <p class="paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
@@ -149,19 +148,31 @@
           Register your interest by filling the form and we will contact you
           with more information
         </p>
-        <form action="https://www.freecodecamp.com/email-submit">
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
           <h2 class="sub-heading">Registration Form</h2>
           <label for="forename"> Forename:</label>
 
-          <input type="text" id="forename" required />
+          <input
+            type="text"
+            id="forename"
+            name="forename"
+            placeholder="Enter Forename"
+            required
+          />
 
           <label for="surname"> Surname:</label>
 
-          <input type="text" id="surname" required />
+          <input
+            type="text"
+            id="surname"
+            name="surname"
+            placeholder="Enter Surname"
+            required
+          />
 
           <label for="email"> Email:</label>
 
-          <input type="email" id="email" placeholder="enter email" required />
+          <input type="email" id="email" name="email" placeholder="Enter Email" required />
 
           <label for="textarea"> Enter any special request here:</label>
 
@@ -192,7 +203,14 @@
             <em class="em">"Total Rookie"</em> No previous experience
           </p>
           <p class="article-p">£500</p>
-          <button class="select" type="button" value="£500" onclick="alert('£500 Selected')">Select</button>
+          <button
+            class="select"
+            type="button"
+            value="£500"
+            onclick="alert('£500 Selected')"
+          >
+            Select
+          </button>
         </article>
         <article>
           <h3><a href="#">Brownhorn Experience</a></h3>
@@ -200,7 +218,14 @@
             <em class="em">"I've Done It Before"</em> Some experience
           </p>
           <p class="article-p">£750</p>
-          <button class="select" type="button" value="£750" onclick="alert('£750 Selected')">Select</button>
+          <button
+            class="select"
+            type="button"
+            value="£750"
+            onclick="alert('£750 Selected')"
+          >
+            Select
+          </button>
         </article>
         <article>
           <h3><a href="#">Brokenhorn Experience</a></h3>
@@ -208,7 +233,14 @@
             <em class="em">"Die-Hard"</em> Can't-get-enough of the experience
           </p>
           <p class="article-p">£1000</p>
-          <button class="select" type="button" value="£1000" onclick="alert('£1000 Selected')">Select</button>
+          <button
+            class="select"
+            type="button"
+            value="£1000"
+            onclick="alert('£1000 Selected')"
+          >
+            Select
+          </button>
         </article>
       </section>
     </main>
@@ -219,22 +251,22 @@
 
       <ul id="footer-ul">
         <li>
-          <a class="nav-link" href="#header-img">logo</a>
+          <a class="nav-link" href="#header-img">Logo</a>
         </li>
         <li>
-          <a class="nav-link" href="#some-info">some info</a>
+          <a class="nav-link" href="#info">Info</a>
         </li>
         <li>
-          <a class="nav-link" href="#video">video</a>
+          <a class="nav-link" href="#video">Video</a>
         </li>
         <li>
-          <a class="nav-link" href="#skills">skills</a>
+          <a class="nav-link" href="#skills">Skills</a>
         </li>
         <li>
-          <a class="nav-link" href="#form">form</a>
+          <a class="nav-link" href="#form">Form</a>
         </li>
         <li>
-          <a class="nav-link" href="#booking">booking</a>
+          <a class="nav-link" href="#booking">Booking</a>
         </li>
       </ul>
       <a
