--- a/my_portfolio/personPort.html
+++ b/my_portfolio/personPort.html
@@ -22,18 +22,19 @@
 
     <section id="projects">
       <h2>These are some of my past projects</h2>
-      <p>Over the past decade, I've been involved in several projects some of which are - <a href="project1">Survey Form</a>, <a href="project2">Project 2</a>, <a href="project3">Project 3</a> and <a href="project4">Project 4</a>.</p>
+      <p>Over the past decade, I've been involved in several projects some of which are - <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-survey-form-project/build-a-survey-form">Project 1 - Survey Form</a>, <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-tribute-page-project/build-a-tribute-page">Project 2 - Tribute Page</a>, <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-technical-documentation-page-project/build-a-technical-documentation-page">Project 3 - Technical Document Page</a> and <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page">Project 4 - Product Landing Page</a>.</p>
       
       <div class="project-tile">
-        <div class="project-div"><figure><img src="surveyForm.png" alt="Survey Form"><figcaption></figcaption></figure><a href="#project1">Survey Form</a><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, id.</p></div>
-        <div class="project-div"><figure><img src="tributePage.png" alt="Tribute Page"><figcaption></figcaption></figure><a href="#project2">Tribute Page</a><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, id.</p></div>
-        <div class="project-div"><figure><img src="technicalDocumentPage.png" alt="Technical Document Page"><figcaption></figcaption></figure><a href="#project3">Technical Document Page</a><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, id.</p></div>
-        <div class="project-div"><figure><img src="productLandingPage.png" alt="Product Landing Page"><figcaption></figcaption></figure><a href="#project4">Product Landing Page</a><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, id.</p></div>
+        <div class="project-div"><figure><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-survey-form-project/build-a-survey-form"><img src="surveyForm.png" alt="Survey Form"><figcaption id="figcaption1">Survey Form</figcaption></a></figure><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis</p></div>
+        <div class="project-div"><figure><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-tribute-page-project/build-a-tribute-page"><img src="tributePage.png" alt="Tribute Page"><figcaption id="figcaption2">Tribute Page</figcaption></a></figure><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+        <div class="project-div"><figure><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-technical-documentation-page-project/build-a-technical-documentation-page"><img src="technicalDocumentPage.png" alt="Technical Document Page"><figcaption id="figcaption3">Technical Document Page</figcaption></a></figure><p>Lorem ipsum dolor sit amet consectetur adipisicing Natus.</p></div>
+        <div class="project-div"><figure><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page"><img src="productLandingPage.png" alt="Product Landing Page"><figcaption id="figcaption4">Product Landing Page</figcaption></a></figure><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p></div>
+
       </div>
     </section>
 
     <section id="profile">
-      <a id="profile-link" href="#myGitHub" target="_blank"><i class="fa-brands fa-square-github"></i> GitHub</a>
+      <a id="profile-link" rel="noopener"  href="https://github.com/gipo-ski/demo-git-repo.git" target="_blank"><i class="fa-brands fa-square-github"></i> GitHub</a>
     </section>
     
   </body>
